--- a/normal-flow-horizontal/normal-flow-horizontal.html
+++ b/normal-flow-horizontal/normal-flow-horizontal.html
@@ -17,16 +17,18 @@
             height: 200px;
             margin: 10px;
             vertical-align: top;
+
         }
         section{
+            text-align: center;
+            line-height: 200px;
             height: 200px;
             background-color: #9E7A7A;
             border-radius: 5px;
-            box-shadow: 5px -3px 15px #4B4E2A;
-            text-align: center;
-
+            box-shadow: 5px 5px 28px #4B4E2A;
 
         }
+
         section:hover{
             background-color: #7BA23F;
             /*margin-left: -50px;*/
@@ -36,7 +38,6 @@
             transition: 0.9s;
             z-index: 0;
             position: relative;
-            text-align: center;
         }
     </style>
 </head>
