--- a/radio-slider/index.html
+++ b/radio-slider/index.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>radio</title>
+    <link rel="stylesheet" href="1.css">
 </head>
 <body>
-    
+<div class="slider">
+    <input type="radio" checked name="1" id="1">
+    <input type="radio" name="1" id="2">
+    <input type="radio" name="1" id="3">
+
+<div>
+        <label for="3">&lt;</label>
+        <label for="2">&gt;</label>
+        <img src="https://i1.mifile.cn/a4/xmad_15427181908339_moblU.jpg" alt="">
+</div>
+<div>
+        <label for="1">&lt;</label>
+        <label for="3">&gt;</label>
+        <img src="https://i1.mifile.cn/a4/xmad_15427030673006_kxsPA.jpg" alt="">
+</div>
+<div>
+        <label for="2">&lt;</label>
+        <label for="1">&gt;</label>
+        <img src="https://i1.mifile.cn/a4/xmad_15425931208271_yKAHi.jpg" alt="">
+</div>
+    <section>
+        <label for="1"></label>
+        <label for="2"></label>
+        <label for="3"></label>
+    </section>
+</div>
 </body>
 </html>
