--- a/noi.html
+++ b/noi.html
@@ -79,18 +79,56 @@
 	console.log(x + "%");
 </script>
 <script id="ch0103/07" type="3-07">
-    
+    var a = +prompt("输入a");
+    var b = +prompt("输入b");
+    var c = +prompt("输入c");
+    var d = +prompt("输入d");
+    var x = +prompt("输入x");
+    var fx = (a*x*x*x + b*x*x + c*x + d).toFixed(7);
+    console.log(fx);
 </script>
-<script id="ch0103/08" type="3-08"></script>
-<script id="ch0103/09" type="3-09"></script>
-<script id="ch0103/10" type="3-10"></script>
-<script id="ch0103/11" type="3-11"></script>
+<script id="ch0103/08" type="3-08">
+    var f = +prompt("输入华氏温度");
+    var c = (5*(f-32)/9).toFixed(5);
+    console.log(c);
+</script>
+<script id="ch0103/09" type="3-09">
+    var r = +prompt("输入半径");
+    var a = (2*r).toFixed(4);
+    var b = (2*r*Math.PI).toFixed(4);
+    var c = (Math.PI*r*r).toFixed(4);
+    console.log(a);
+    console.log(b);
+    console.log(c);
+</script>
+<script id="ch0103/10" type="3-10">
+    var r1 = +prompt("第一个阻抗");
+    var r2 = +prompt("第二个阻抗");
+    var  r = (1/(1/r1+1/r2)).toFixed(2);
+    console.log(r);
+</script>
+<script id="ch0103/11" type="3-11">
+   	var a = +prompt("输入a");
+	var b = +prompt("输入b");
+	var x = (a%b).toFixed(4);
+	console.log(x);
+</script>
 <script id="ch0103/12" type="3-12"></script>
-<script id="ch0103/13" type="3-13"></script>
-<script id="ch0103/14" type="3-14"></script>
+<script id="ch0103/13" >
+    var n = +prompt("输入一个三位数");
+    var h = parseInt(n/100).toString();
+    var t = (parseInt(n/10)%10).toString();
+    var a = (n%10).toString();
+    console.log(a+t+h);
+</script>
+<script id="ch0103/14" type="3-14">
+
+</script>
 <script id="ch0103/15" type="3-15"></script>
 <script id="ch0103/16" type="3-16"></script>
-<script id="ch0103/17" type="3-17"></script>
+<script id="ch0103/17" type="3-17">
+    向量求面积
+</script>
 <script id="ch0103/18" type="3-18"></script>
 <script id="ch0103/19" type="3-19"></script>
 <script id="ch0103/20" type="3-20"></script>
