--- a/noi.html
+++ b/noi.html
@@ -5,32 +5,33 @@
     <title>noi</title>
 </head>
 <body>
+<div class="ch0101">
 <script id="ch0101/01" type="1-01">
     console.log("hello world")
 </script>
-<script id="ch0101/02" type="1-02">
+    <script id="ch0101/02" type="1-02">
     var x = prompt("第一个数");
     var y = prompt("第二个数");
     var z = prompt("第三个数");
     console.log(y);
 </script>
-<script id="ch0101/03" type="1-03">
+    <script id="ch0101/03" type="1-03">
 	var x = prompt("第一个数");
 	var y = prompt("第二个数");
 	var z = prompt("第三个数");
 	console.log(x,y,z);
 </script>
-<script id="ch0101/04" type="1-04">
+    <script id="ch0101/04" type="1-04">
     var x = +prompt("输入一个单精度浮点数","3.1415926")
     var y = x.toFixed(3);
     console.log(y);
 </script>
-<script id="ch0101/05" type="1-05">
+    <script id="ch0101/05" type="1-05">
 	var x = +prompt("输入一个双精度浮点数","3.1415926535798932")
 	var y = x.toFixed(12);
 	console.log(y);
 </script>
-<script id="ch0101/06" type="1-06">
+    <script id="ch0101/06" type="1-06">
     var a = prompt("输入一个字符");
     var b = prompt("输入一个整数");
     var c = +prompt("输入一个单精度浮点数");
@@ -42,7 +43,7 @@
     console.log(x);
     console.log(y);
 </script>
-
+</div>
 <div class="ch0103">
     <script id="ch0103/01" type="3-01">
     var a = +prompt("输入a");
@@ -59,7 +60,7 @@
 	var a = +prompt("输入a");
 	var b = +prompt("输入b");
 	var c = +prompt("输入c");
-	console.log((a+b)/c);
+	console.log(parseInt((a+b)/c));
 </script>
     <script id="ch0103/04" type="3-04">
     var x = +prompt("输入被除数");
@@ -81,11 +82,11 @@
 	console.log(x + "%");
 </script>
     <script id="ch0103/07" type="3-07">
+    var x = +prompt("输入x");
     var a = +prompt("输入a");
     var b = +prompt("输入b");
     var c = +prompt("输入c");
     var d = +prompt("输入d");
-    var x = +prompt("输入x");
     var fx = (a*x*x*x + b*x*x + c*x + d).toFixed(7);
     console.log(fx);
 </script>
@@ -95,10 +96,11 @@
     console.log(c);
 </script>
     <script id="ch0103/09" type="3-09">
-    var r = +prompt("输入半径");
-    var a = (2*r).toFixed(4);
-    var b = (2*r*Math.PI).toFixed(4);
-    var c = (Math.PI*r*r).toFixed(4);
+    var  r = +prompt("输入半径");
+    var pi = 3.14159;
+    var  a = (2*r).toFixed(4);
+    var  b = (2*r*pi).toFixed(4);
+    var  c = (pi*r*r).toFixed(4);
     console.log(a);
     console.log(b);
     console.log(c);
@@ -115,7 +117,11 @@
 	var x = (a%b).toFixed(4);
 	console.log(x);
 </script>
-    <script id="ch0103/12" type="3-12"></script>
+    <script id="ch0103/12" type="3-12">
+            var r = +prompt("输入球体半径");
+            var V = (4/3*3.14*r*r).toFixed(2);
+            console.log(V);
+    </script>
     <script id="ch0103/13" type="3-13">
 			var n = +prompt("输入一个三位数");
 			var h = parseInt(n/100).toString();
