--- a/noi.html
+++ b/noi.html
@@ -358,7 +358,7 @@
         }
         console.log((total/n).toFixed(2));
     </script>
-    <script id="ch0105/02" type="">
+    <script id="ch0105/02" type="5-02">
         var y = 0;
         for (var i = 0;i<12;i++){
         	var x = (+prompt("输入"+(i+1)+"月结余")).toFixed(2);
@@ -367,15 +367,113 @@
         console.log("$"+(y/12).toFixed(2));
     </script>
     <script id="ch0105/03" type="5-03">
+         var n = +prompt("输入一个整数");
+         var z = 0;
+         for(var i = 0;i < n; i++){
+         	var x = +prompt("输入一个浮点数");
+         	if (x>=10000 || x<=-10000){console.log("超出范围");}
+            z = z + x;
+         }
+         console.log((z/n).toFixed(4));
+    </script>
+    <script id="ch0105/04" type="5-04">
+	    var n = +prompt("输入一个整数");
+	    var z = 0;
+	    for(var i = 0;i < n; i++){
+		    var x = +prompt("输入一个整数");
+		    if (x>=10000 || x<=-10000){console.log("超出范围");}
+		    z = z + x;
+	    }
+	    console.log(z);
+	    console.log((z/n).toFixed(5));
+    </script>
+    <script id="ch0105/05" type="5-05">
+         var n = +prompt("输入一个整数");
+         var z = 0;
+         for(var i = 0;i < n; i++){
+         	var x = +prompt("输入第"+(i+1)+"个学生成绩");
+         	if(x>z)  z = x;
+         }
+         console.log(z);
+    </script>
+    <script id="ch0105/06" type="5-06">
+        var n = +prompt("输入一个整数");
+        var arr = [];
+        for(var i = 0;i < n; i++){
+	        arr[i] = +prompt("输入第"+(i+1)+"个数");
+            if (i>0) {
+	            if (arr[i] < arr[i-1]) {
+		            tmp = arr[i];
+		            arr[i] = arr[i-1];
+		            arr[i-1] = tmp;
+	            }
+            }
+        }
+        console.log(arr[n-1]-arr[0]);
+    </script>
+    <script id="ch0105/07" type="5-07">
+        var n = +prompt("奥运会天数");
+        var a = 0;
+        var b = 0;
+        var c = 0;
+        for (i = 0;i < n;i++){
+        	var x = +prompt("第"+(i+1)+"天获得的金牌数");
+	        var y = +prompt("第"+(i+1)+"天获得的银牌数");
+	        var z = +prompt("第"+(i+1)+"天获得的铜牌数");
+	        a = a + x;
+	        b = b + y;
+	        c = c + z;
+        }
+        console.log(a);
+        console.log(b);
+        console.log(c);
+        console.log(a+b+c);
+    </script>
+    <script id="ch0105/08" type="5-08">
+        var n = +prompt("输入一个整数");
+        var z = 0;
+        for (i = 0;i < (n-1);i++){
+        	var x = +prompt("第"+(i+1)+"个内角");
+        	z = z + x;
+        }
+        console.log((n-2)*180-z);
 
     </script>
-    <script id="ch0105/04" type="5-04"></script>
-    <script id="ch0105/05" type="5-05"></script>
-    <script id="ch0105/06" type="5-06"></script>
-    <script id="ch0105/07" type="5-07"></script>
-    <script id="ch0105/08" type="5-08"></script>
-    <script id="ch0105/09" type="5-09"></script>
-    <script id="ch0105/10" type="5-10"></script>
+    <script id="ch0105/09" type="5-09">
+        var odd = [];
+        var even = [];
+        var z = 0;
+        var m = +prompt("输入m");
+        var n = +prompt("输入n");
+        for (var i = 0;i < 300;i++){
+        	odd[i] = 2*i+1;
+	        even[i] = 2*i;
+        }
+        if((m-1)%2===0)
+        	var x = odd.indexOf(m);
+        else
+        	var x = odd.indexOf(m+1);
+        if((n-1)%2===0)
+        	var y = odd.indexOf(n);
+        else
+        	var y = odd.indexOf(n-1);
+        for (j = x;j<=y;j++){
+        	z= z+odd[j];
+        }
+        console.log(z);
+    </script>
+    <script id="ch0105/10" type="5-10">
+        var m = +prompt("输入m");
+        var n = +prompt("输入n");
+        var z = 0;
+        for(var i = m;i<=n;i++){
+        	if(i%17===0){
+        		z=z+i;
+            }
+        }
+        console.log(z);
+
+    </script>
     <script id="ch0105/11" type="5-11">
         var k = +prompt("输入数的个数");
         var countOne = 0;
@@ -448,7 +546,7 @@
          	if(arr[i]<arr[i-1]){
          		tmp = arr[i];
          		arr[i] = arr[i-1];
-         		arr[i-1] = tmp
+         		arr[i-1] = tmp;
             }//TODO:还有其他的替代方案,这是一种最笨的;
          	}
          }
